--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body{
 	color: #333;
 	font: 16px Helvetica, Arial, Sans-Serif;
 
-	background-image: url('/img/background.jpg');
+	background-image: url('/img/background.min.jpg');
 	background-position: 50%;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
