--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,11 @@ html {
 	overflow-y: scroll;
 }
 body{
-	color: #333;
-	font: 16px 'Open Sans', sans-serif;
-	background-image: url('/img/background.jpg');
 	background-position: 50%;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-size: cover;
+	background-image: url(/img/background.jpg);
 	height: 100%;
 }
 #blur {
@@ -19,21 +17,17 @@ body{
 	right: 0;
 	bottom: 0;
 	background: #fff;
-	opacity: 0.1;
+	opacity: 0.5;
 	filter:Alpha(Opacity=10);
 }
 #wrap {
 	position: absolute;
 	top: 12%;
 	left: 17%;
-	width: 380px;
+	width: 500px;
 	margin: 0;
-	padding: 20px 10px 10px 20px;
-	line-height: 1.5em;
-	font-size: 20px;
+	padding: 20px 40px 20px 40px;
 	color: #444;
-	background: #008080; /* Fallback IE 6-8 */
-	background: rgba(123, 123, 123, .4);
 	border-radius: 7px;
 }
 
@@ -50,25 +44,17 @@ ia only screen and (max-width: 767px) {
 	}
 }
 
-header {
-	font-size: 22px;
-	font-weight: bold;
-}
-header span.hello {
-	display: block;
-	font-size: 46px;
-	font-weight: bold;
-	margin-bottom: 10px;
-	color: rgb(169, 54, 41);
-}
+h1.hello {
+	color: #FF4136;}
+
 
 a {
 	font-weight: bold;
 	text-decoration: none;
-	color: #333;
+	color: #a7a7a7;
 }
 a:hover{
-	color: rgb(169, 54, 41);
+	color: #FF4136;
 }
 
 footer {
